--- a/gra.html
+++ b/gra.html
@@ -5,46 +5,139 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Gra SŁOWO - Online</title>
 <style>
-  body { font-family: Arial, sans-serif; max-width: 400px; margin: 20px auto; }
-  h1 { text-align: center; }
-  #board { margin-top: 20px; }
-  .row { display: flex; justify-content: center; margin-bottom: 5px; }
-  .cell {
-    width: 40px; height: 40px; margin: 2px;
-    border: 2px solid #999; font-size: 24px; font-weight: bold;
-    text-align: center; line-height: 40px;
-    text-transform: uppercase;
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .correct { background-color: #4caf50; color: white; border-color: #4caf50; }
-  .present { background-color: #ffeb3b; border-color: #fbc02d; }
-  .absent { background-color: #ddd; border-color: #bbb; }
-  input { font-size: 18px; padding: 8px; width: 200px; text-transform: uppercase; }
-  button { padding: 8px 16px; font-size: 16px; margin-left: 10px; }
-  #message { margin-top: 15px; font-weight: bold; text-align: center; }
+  header {
+    background: #3f51b5;
+    color: white;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+  }
+  h1 {
+    margin: 0;
+    font-size: 24px;
+  }
+  p {
+    margin: 5px 0 0;
+    font-size: 14px;
+  }
+  #board {
+    margin-top: 20px;
+  }
+  .row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  .cell {
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+    border: 2px solid #999;
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 50px;
+    text-transform: uppercase;
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    transition: all 0.2s ease;
+  }
+  .correct {
+    background-color: #4caf50;
+    color: white;
+    border-color: #4caf50;
+  }
+  .present {
+    background-color: #ffeb3b;
+    color: black;
+    border-color: #fbc02d;
+  }
+  .absent {
+    background-color: #ddd;
+    color: #555;
+    border-color: #bbb;
+  }
+  .controls {
+    text-align: center;
+    margin-top: 20px;
+  }
+  input {
+    font-size: 18px;
+    padding: 8px;
+    width: 200px;
+    text-transform: uppercase;
+    border: 2px solid #999;
+    border-radius: 4px;
+  }
+  button {
+    padding: 8px 16px;
+    font-size: 16px;
+    margin-left: 10px;
+    background: #3f51b5;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
+  button:hover {
+    background: #303f9f;
+  }
+  #message {
+    margin-top: 15px;
+    font-weight: bold;
+    text-align: center;
+  }
+  footer {
+    margin-top: 40px;
+    font-size: 12px;
+    color: #777;
+    text-align: center;
+  }
 </style>
 </head>
 <body>
 
-<h1>Gra "SŁOWO"</h1>
-<p>Odgadnij 5-literowe słowo. Masz 6 prób.</p>
+<header>
+  <h1>Gra "SŁOWO"</h1>
+  <p>Odgadnij 5-literowe słowo w maksymalnie 6 próbach</p>
+</header>
 
 <div id="board"></div>
 
-<div style="text-align:center; margin-top:20px;">
+<div class="controls">
   <input id="guessInput" maxlength="5" autocomplete="off" autofocus placeholder="Wpisz słowo" />
   <button id="guessBtn">Sprawdź</button>
+  <button id="resetBtn">Nowa gra</button>
 </div>
 
 <div id="message"></div>
 
+<footer>
+  © 2025 Gra SŁOWO – wersja demo
+</footer>
+
 <script>
-  const ANSWER = 'SŁOWO';
+  const WORDS = ['SŁOWO','DOMEK','KOTEK','MYSZA','PTAKI','OKNOX','PLAMA','KRATA'];
+  let ANSWER = WORDS[Math.floor(Math.random() * WORDS.length)];
   const MAX_GUESSES = 6;
   let guesses = 0;
 
   const board = document.getElementById('board');
   const guessInput = document.getElementById('guessInput');
   const guessBtn = document.getElementById('guessBtn');
+  const resetBtn = document.getElementById('resetBtn');
   const message = document.getElementById('message');
 
   function createRow() {
@@ -64,15 +157,15 @@
     const guessArr = guess.split('');
     const cellElems = row.children;
 
-    // Najpierw oznacz poprawne (zielone)
+    // Najpierw zielone
     for(let i=0; i<5; i++) {
       if(guessArr[i] === answerArr[i]) {
         cellElems[i].classList.add('correct');
-        answerArr[i] = null; // usuwamy tę literę, żeby nie oznaczać jej ponownie
+        answerArr[i] = null;
         guessArr[i] = null;
       }
     }
-    // Następnie oznacz żółte i szare
+    // Potem żółte i szare
     for(let i=0; i<5; i++) {
       if(guessArr[i] !== null) {
         const index = answerArr.indexOf(guessArr[i]);
@@ -100,6 +193,17 @@
     message.style.color = color;
   }
 
+  function resetGame() {
+    board.innerHTML = '';
+    guesses = 0;
+    ANSWER = WORDS[Math.floor(Math.random() * WORDS.length)];
+    guessInput.disabled = false;
+    guessBtn.disabled = false;
+    showMessage('');
+    guessInput.value = '';
+    guessInput.focus();
+  }
+
   guessBtn.addEventListener('click', () => {
     const guess = guessInput.value.toUpperCase();
     if(guess.length !== 5) {
@@ -107,7 +211,7 @@
       return;
     }
     if(guesses >= MAX_GUESSES) {
-      showMessage('Koniec prób. Spróbuj ponownie odświeżając stronę.', 'red');
+      showMessage('Koniec prób. Kliknij "Nowa gra".', 'red');
       return;
     }
 
@@ -135,6 +239,10 @@
     }
   });
 
+  resetBtn.addEventListener('click', resetGame);
+
+  // Start gry
+  resetGame();
 </script>
 
 </body>
